--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
 name: Playwright Tests
 on:
-  push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+  # push:
+  #   branches: [ main, master ]
+  # pull_request:
+  #   branches: [ main, master ]
+  schedule:
+    - cron: "*/2 * * * *"
 jobs:
   test:
     timeout-minutes: 60
@@ -25,3 +27,4 @@ jobs:
         name: playwright-report
         path: playwright-report/
         retention-days: 30
+
