--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Playwright Tests
 on:
-  # push:
-  #   branches: [ main, master ]
+  push:
+    branches: main
   # pull_request:
   #   branches: [ main, master ]
   schedule:
